[gd_scene load_steps=23 format=2]

[ext_resource path="res://game.tscn" type="PackedScene" id=1]
[ext_resource path="res://spin.gd" type="Script" id=2]
[ext_resource path="res://CG ASSETS_Slot/Inter-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://text_bg_style.tres" type="StyleBox" id=4]
[ext_resource path="res://text_theme.tres" type="Theme" id=5]
[ext_resource path="res://CG ASSETS_Slot/S_BG_Button.png" type="Texture" id=6]
[ext_resource path="res://CG ASSETS_Slot/S_BT_Auto.png" type="Texture" id=7]
[ext_resource path="res://CG ASSETS_Slot/S_BT_BG_001.png" type="Texture" id=8]
[ext_resource path="res://CG ASSETS_Slot/S_BT_Spin.png" type="Texture" id=9]
[ext_resource path="res://CG ASSETS_Slot/S_BT_BG_003.png" type="Texture" id=10]
[ext_resource path="res://CG ASSETS_Slot/S_BG_GameArea.png" type="Texture" id=11]
[ext_resource path="res://CG ASSETS_Slot/S_BT_BG_002.png" type="Texture" id=12]
[ext_resource path="res://CG ASSETS_Slot/S_Icon_Money.png" type="Texture" id=13]
[ext_resource path="res://CG ASSETS_Slot/S_BG.png" type="Texture" id=14]
[ext_resource path="res://CG ASSETS_Slot/S_BT_MB.png" type="Texture" id=15]
[ext_resource path="res://sounds/3d pinball _ 01.wav" type="AudioStream" id=16]
[ext_resource path="res://sounds/3d pinball _ 05.wav" type="AudioStream" id=17]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.329412, 0.329412, 0.329412, 0.133333 )
corner_radius_top_left = 150
corner_radius_top_right = 150
corner_radius_bottom_right = 150
corner_radius_bottom_left = 150
corner_detail = 16

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0.466667, 0.113725, 0.588235, 0.435294 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=6]
size = 36
outline_size = 3
outline_color = Color( 0.282353, 0.105882, 0.509804, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -360.0
margin_right = 480.0
margin_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5

[node name="GAME LAYER" type="CanvasLayer" parent="."]

[node name="GAME" parent="GAME LAYER" instance=ExtResource( 1 )]
margin_top = -69.0
margin_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG LAYER" type="CanvasLayer" parent="."]

[node name="BGBG" type="TextureRect" parent="BG LAYER"]
light_mask = 32
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
expand = true

[node name="GameBG" type="TextureRect" parent="BG LAYER"]
light_mask = 32
anchor_left = 0.5
anchor_right = 0.5
margin_left = -397.0
margin_right = 397.0
margin_bottom = 600.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="BOTTOM LAYER" type="CanvasLayer" parent="."]

[node name="BottomBar" type="TextureRect" parent="BOTTOM LAYER"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -435.0
margin_top = 420.0
margin_right = 436.0
margin_bottom = 747.0
rect_pivot_offset = Vector2( 804, 183 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Auto" type="ToolButton" parent="BOTTOM LAYER/BottomBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 116.5
margin_top = -91.0
margin_right = 276.5
margin_bottom = 79.0
rect_pivot_offset = Vector2( 114, 89.0002 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 4 )
toggle_mode = true
action_mode = 0
icon = ExtResource( 7 )
flat = false
icon_align = 1
expand_icon = true

[node name="Max" type="ToolButton" parent="BOTTOM LAYER/BottomBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 253.5
margin_top = -89.0
margin_right = 413.5
margin_bottom = 71.0
action_mode = 0
icon = ExtResource( 15 )
icon_align = 1
expand_icon = true

[node name="TextBG" type="TextureRect" parent="BOTTOM LAYER/BottomBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -402.5
margin_top = -64.0
margin_right = -288.5
margin_bottom = -7.0
rect_pivot_offset = Vector2( 76, 51 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="TextBG2" type="TextureRect" parent="BOTTOM LAYER/BottomBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -282.5
margin_top = -87.0
margin_right = -114.5
margin_bottom = 15.0
rect_pivot_offset = Vector2( 76, 51 )
texture = ExtResource( 12 )
expand = true
stretch_mode = 6

[node name="TextBG3" type="TextureRect" parent="BOTTOM LAYER/BottomBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -406.5
margin_top = -22.0
margin_right = -109.5
margin_bottom = 66.0
rect_pivot_offset = Vector2( 76, 51 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="TOTALBET" type="Label" parent="BOTTOM LAYER/BottomBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.5
margin_top = -58.0
margin_right = -121.5
margin_bottom = -15.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_styles/normal = ExtResource( 4 )
text = "  TOTAL BET: 666"
valign = 1
autowrap = true
uppercase = true

[node name="BALANCE" type="Label" parent="BOTTOM LAYER/BottomBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -395.5
margin_right = -121.5
margin_bottom = 43.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.992157, 0.909804, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = ExtResource( 4 )
text = "  BALANCE: 4545454545"
valign = 1
autowrap = true
uppercase = true

[node name="Cash" type="TextureRect" parent="BOTTOM LAYER/BottomBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -247.5
margin_top = -66.0
margin_right = -63.5
margin_bottom = 101.0
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="Spin" type="ToolButton" parent="BOTTOM LAYER/BottomBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -113.0
margin_right = 110.0
margin_bottom = 107.0
mouse_default_cursor_shape = 2
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
shortcut_in_tooltip = false
action_mode = 0
icon = ExtResource( 9 )
clip_text = true
icon_align = 1
expand_icon = true
script = ExtResource( 2 )

[node name="SpinBox" type="SpinBox" parent="BOTTOM LAYER/BottomBar/Spin"]
margin_left = -283.5
margin_top = 56.5
margin_right = -188.5
margin_bottom = 95.5
theme = ExtResource( 5 )
min_value = 1.0
max_value = 9999.0
value = 1.0

[node name="WinSound" type="AudioStreamPlayer" parent="BOTTOM LAYER/BottomBar/Spin"]
stream = ExtResource( 17 )
volume_db = -12.0
mix_target = 2

[node name="RollSound" type="AudioStreamPlayer" parent="BOTTOM LAYER/BottomBar/Spin"]
stream = ExtResource( 16 )
volume_db = -12.0
mix_target = 2

[node name="WINMSG" type="Label" parent="BOTTOM LAYER/BottomBar/Spin"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -164.0
margin_top = -375.0
margin_right = 164.0
margin_bottom = -185.0
custom_colors/font_color = Color( 1, 0.862745, 0.32549, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "YOU WON:
000"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="win_FRAME" type="TextureRect" parent="BOTTOM LAYER/BottomBar/Spin/WINMSG"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.0
margin_top = -71.0
margin_right = 138.0
margin_bottom = 71.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 1

[node name="win_BG" type="TextureRect" parent="BOTTOM LAYER/BottomBar/Spin/WINMSG"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -60.0
margin_right = 127.0
margin_bottom = 60.0
texture = ExtResource( 14 )
expand = true
stretch_mode = 1

[node name="CPUParticles2D" type="CPUParticles2D" parent="BOTTOM LAYER/BottomBar/Spin/WINMSG"]
show_behind_parent = true
position = Vector2( 165, 0 )
lifetime = 2.0
explosiveness = 0.3
texture = ExtResource( 13 )
emission_shape = 2
emission_rect_extents = Vector2( 100, 10 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 200 )
initial_velocity = 50.0
initial_velocity_random = 1.0
angle = 180.0
angle_random = 1.0
scale_amount = 0.1
scale_amount_random = 0.5

[connection signal="ready" from="GAME LAYER/GAME" to="BOTTOM LAYER/BottomBar/Spin" method="_on_GAME_ready"]
[connection signal="pressed" from="BOTTOM LAYER/BottomBar/Auto" to="BOTTOM LAYER/BottomBar/Spin" method="_on_Auto_pressed"]
[connection signal="pressed" from="BOTTOM LAYER/BottomBar/Max" to="BOTTOM LAYER/BottomBar/Spin" method="_on_Max_pressed"]
[connection signal="pressed" from="BOTTOM LAYER/BottomBar/Spin" to="BOTTOM LAYER/BottomBar/Spin" method="_on_Spin_pressed"]
[connection signal="value_changed" from="BOTTOM LAYER/BottomBar/Spin/SpinBox" to="BOTTOM LAYER/BottomBar/Spin" method="_on_SpinBox_value_changed"]
